2004-06-22 Serg Stoyan <stoyan255@ukr.net>

	* Library/PCFileManager.m:
	(panel:shouldShowFilename:): Treat .gorm dirs not as dirs.
	
	* Library/PCProject.m:
	(doesAcceptFile:forKey:): Check existance of file in
	sourceFileKeys and resourceFileKeys.
	
	* Modules/*: Made cleanup in sourceFileKeys, resourceFileKeys and
	otherKeys methods.
	
2004-06-21 Serg Stoyan <stoyan255@ukr.net>

	* Library/PCFileManager.m: 
	(panel:shouldShowFilename:): Fix filtering out files already 
	included in project. Optimized.
	
2004-06-20 Serg Stoyan <stoyan255@ukr.net>

	* Release 0.4.0.
	
	* Library/PCProjectWindow.m: 
	(activeProjectDidChange:): Take into account subprojects of 
	subprojects.
	(showProjectLaunch:): Remove attention panel if project is not
	executable.
	
	* Library/PCProjectBrowser.m: (activeProjectDidChange:): ditto.
	Take into account subprojects of subprojects.
	
	* Library/PCProjectLauncher.m:
	(debug:): Check if project is executable and order attention panel
	if not.

	* Modules/ApplicationProject/Resources/Inspector.gorm:
	Fix connection between "Add" button and addDocIcon: method.
	
	* Modules/ApplicationProject/PCAppProject.m: 
	(appendApplication:): Removed.
	(appndHead:): Move appendApplication's code here. Write into 
	GNUmakefile <projectName>_STANDARD_INSTALL = no if install dir 
	attribute was not set.
	* Modules/BundleProject/PCBundleProject.m: 
	(appendHead:): Write into GNUmakefile 
	<projectName>_STANDARD_INSTALL = no if install dir attribute was 
	not set.
	* Modules/RenaissanceProject/PCRenaissanceProject.m: 
	(appendApplication:): ditto.
	* Modules/ToolProject/PCToolProject.m:
	(appendHead:): ditto
	
2004-06-19 Serg Stoyan <stoyan255@ukr.net>

	* Library/PCProjectManager.m:
	(convertLegacyProject:atPath:): Get files list from .pcproj file not
	from directories.
	
	* Library/PCProject.m:
	(renameFile:toFile): Handle the case when filename already exist.
	Do not use removeFiles and addFiles methods, change projectDict
	directly.